// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`project: internet-banking サンプル統合テスト > produces a stable projected graph at level 1 1`] = `
[
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する (+1)",
    "mergedCount": 2,
    "technology": "HTTPS",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "ibs",
    "label": "通知を依頼 (+2)",
    "mergedCount": 3,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "口座情報を照会",
    "mergedCount": 1,
    "technology": "内部API",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "信用照会",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "creditBureau",
  },
]
`;

exports[`project: internet-banking サンプル統合テスト > produces a stable projected graph at level 2 1`] = `
[
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "ibs",
    "label": "通知を依頼",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "口座情報を照会",
    "mergedCount": 1,
    "technology": "内部API",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "信用照会",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "creditBureau",
  },
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "spa",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す (+2)",
    "mergedCount": 3,
    "technology": "JSON/HTTPS",
    "to": "api",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "読み書き (+2)",
    "mergedCount": 3,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "通知を依頼 (+1)",
    "mergedCount": 2,
    "technology": "SMTP",
    "to": "email",
  },
]
`;

exports[`project: internet-banking サンプル統合テスト > produces a stable projected graph at level 3 1`] = `
[
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "ibs",
    "label": "通知を依頼",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "口座情報を照会",
    "mergedCount": 1,
    "technology": "内部API",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "信用照会",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "creditBureau",
  },
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "spa",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "technology": "JSON/HTTPS",
    "to": "api",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "通知を依頼",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "to": "signin",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "to": "transferSvc",
  },
  {
    "bidirectional": false,
    "from": "accounts",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "transferSvc",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "transferSvc",
    "label": "通知を依頼",
    "mergedCount": 1,
    "to": "notification",
  },
  {
    "bidirectional": false,
    "from": "notification",
    "label": "メール送信",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
]
`;

exports[`project: internet-banking サンプル統合テスト > produces a stable projected graph at level 4 1`] = `
[
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "ibs",
    "label": "通知を依頼",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "口座情報を照会",
    "mergedCount": 1,
    "technology": "内部API",
    "to": "ibs",
  },
  {
    "bidirectional": false,
    "from": "backoffice",
    "label": "信用照会",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "creditBureau",
  },
  {
    "bidirectional": false,
    "from": "customer",
    "label": "利用する",
    "mergedCount": 1,
    "technology": "HTTPS",
    "to": "spa",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "technology": "JSON/HTTPS",
    "to": "api",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "api",
    "label": "通知を依頼",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "to": "signin",
  },
  {
    "bidirectional": false,
    "from": "spa",
    "label": "呼び出す",
    "mergedCount": 1,
    "to": "transferSvc",
  },
  {
    "bidirectional": false,
    "from": "accounts",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "transferSvc",
    "label": "読み書き",
    "mergedCount": 1,
    "technology": "JDBC",
    "to": "db",
  },
  {
    "bidirectional": false,
    "from": "transferSvc",
    "label": "通知を依頼",
    "mergedCount": 1,
    "to": "notification",
  },
  {
    "bidirectional": false,
    "from": "notification",
    "label": "メール送信",
    "mergedCount": 1,
    "technology": "SMTP",
    "to": "email",
  },
  {
    "bidirectional": false,
    "from": "AccountService",
    "mergedCount": 1,
    "to": "AccountRepository",
  },
  {
    "bidirectional": false,
    "from": "TransferService",
    "label": "uses",
    "mergedCount": 1,
    "to": "TransferValidator",
  },
]
`;
